tests/language_modules/09_statements/valid/if_statement.vf
module IfStatement

procedure main()
is
    let amount: Integer = 1
    if amount = 1 then
        check true
    else
        check false = true
    end if
end main

end IfStatement