tests/language_modules/09_statements/invalid_semantics/while_condition_requires_boolean.vf
module WhileConditionRequiresBoolean

procedure main()
is
    let amount: Integer = 1
    while amount
        invariant true
    do
        amount := amount - 1
    end while
end main

end WhileConditionRequiresBoolean